--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,9 +1,9 @@
-
 <body class="text-center">
     <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Nicolas Véron</h1>
-        <p class="lead">Je fais le projet en solo pour l'instant, mais si tu veux rejoindre mon groupe t'es le bienvenue. J'eécris pour faire un text</p>
+        <h1 class="cover-heading">Mes contact:</h1>
+        <p class="lead">Email: arrvac@gmail.com</p>
+        <p class="lead">Email: mmolinar@gmail.com</p>
       </main>
 
       <footer class="mastfoot mt-auto">
