--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -1,9 +1,9 @@
 <body class="text-center">
     <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Mes contact:</h1>
-        <p class="lead">Email: arrvac@gmail.com</p>
-        <p class="lead">Numéro de téléphone: 06 14 93 11 85</p>
+        <h1 class="cover-heading">Our team</h1>
+        <p class="lead">Meet the team:</p>
+        <p class="lead">Nicolas VERON et Maria MOLINAR</p>
       </main>
 
       <footer class="mastfoot mt-auto">
