Fix some bugs and add link_to

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
     <div class="inner">
       
         <nav class="nav nav-masthead">            
-          <a class="nav-link active" href="/team">Team</a>
-          <a class="nav-link" href="/contact">Contact</a>
+          <p class="nav-link active"> <%= link_to "Team", "/team"%> </p>
+          <p class="nav-link active"> <%= link_to "Contact", "/contact"%> </p>
         </nav>
     </div>
   </header>
