--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,6 @@
 <h1>StaticPages#index</h1>
 <p>Find me in app/views/static_pages/index.html.erb</p>
 
-destroy model 
+<% @goss.each_with_index do |gossip, i| %>
+		<li>Le potin de <%= link_to gossip.title, "#"%> </a></li>
+<% end %></br>
