Change in css in home and index

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,8 @@
 <body class="text-center">
     <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">bienvenue <%= @name%> ! Ici c'est notre super site de potins, il est chouette, non ?</h1>
+        <h1 class="cover-heading">Bienvenue <%= @name%>! </h1>
+        <p class="lead"> Ici c'est notre super site de potins, il est chouette, non ?</p>
       </main>
       <footer class="mastfoot mt-auto">
       </footer>
