--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,8 @@
   <header class="masthead mb-auto">
     <div class="inner">
       
-        <nav class="nav nav-masthead">            
+        <nav class="nav nav-masthead">
+          <p class="navbar-brand"> <%= link_to "Welcome", "welcome/:first_name"%> </p>     
           <p class="nav-link active"> <%= link_to "Team", "/team"%> </p>
           <p class="nav-link active"> <%= link_to "Contact", "/contact"%> </p>
         </nav>
