--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<body class="text-center">
+<div class="jumbotron jumbotron-fluid"
     <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
       <main role="main" class="inner cover">
         <h1 class="cover-heading">Bienvenue <%= @name%>! </h1>
@@ -7,4 +7,4 @@
       <footer class="mastfoot mt-auto">
       </footer>
     </div>
-</body>
+    </div>
