--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,15 +1,18 @@
 <div class="container">
         <div class="row">
-                <% @goss.each_slice(3) do |gossip, i| %>
-                        <div class="card-deck col-md-8 mx-auto">
-                        <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                        <h5 class="card-title">Le potin de <%= gossip.user.first_name%></h5>
-                        <p class="card-text"><%= gossip.content%></p>
-                        <%= link_to gossip.title, "/gossips/#{gossip.id}" %>
-                        </div>
-                        </div>
+                <% @goss.each_slice(3) do |gossip| %>
+                        <div class="card-deck">
+                        <% gossip.each do |gossip| %>
+                                <div class="card">
+                                        <div class="card-body">
+                                                <h5 class="card-title">Le potin de <%= gossip.user.first_name%></h5>
+                                                <p class="card-text"><%= gossip.content%></p>
+                                        <%= link_to gossip.title, "/gossips/#{gossip.id}" %>
+                                        </div>
+                                </div>
+                        <% end %>
                         </div>
                 <% end %>
         </div>
 </div>
+
