--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
         <div class="row">
-                <div class="card-deck col-md-8 mx-auto">
+                <div class="card-group col-md-8 mx-auto">
                         <% @goss.each_with_index do |gossip, i| %>
                                 <div class="card" style="width: 18rem;">
                                         <div class="card-body">
