margin-bottom for cards

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-        <div class="row">
+        <div class="row message">
                 <% @goss.each_slice(4) do |gossip| %>
                         <div class="card-deck">
                         <% gossip.each do |gossip| %>
