--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
         <div class="row message">
                 <% @goss.each_slice(4) do |gossip| %>
                         <div class="card-deck">
