--- a/app/views/static_pages/user_show.html.erb
+++ b/app/views/static_pages/user_show.html.erb
@@ -1,16 +1,17 @@
-<div class="container-fluid text-center">
-    <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
-      <main role="main" class="inner cover">
-        <h1>
-            <%= gravatar_for(@usr) %>
-            <%= @usr.first_name %>
-            <%= @usr.last_name %>
-            , <%= @usr.age %> years
-            <br>
-            <%= @usr.email %>
-        </h1>
-      </main>
-      <footer class="mastfoot mt-auto">
-      </footer>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-2">
+      <%= gravatar_for(@usr) %>
     </div>
+    <div class="col-md-3">
+      <h1 class="display-4">
+        <%= @usr.first_name %>
+        <%= @usr.last_name %>
+      </h1> 
+      <p class="lead">
+        <%= @usr.age %> years
+        <%= @usr.email %>
+      </p>
+    </div>
+  </div>
 </div>
